overlapping para on slide 3 fixed

--- a/css/style.less
+++ b/css/style.less
@@ -1065,10 +1065,13 @@ footer {
 
 	#page3 {
 		height: 300%;
-
+		
 		h1 {
 			top: 50px;
 			font-size: 3.3em;
+		}
+		p{
+			top: 150px;
 		}
 		.circle {
 			padding: 29px;
